--- a/index.html
+++ b/index.html
@@ -43,8 +43,6 @@
             margin-bottom: 25px;
             font-size: clamp(1em, 4vw, 1.1em);
         }
-
-        /* Icon lì xì */
         .lixi-icon {
             font-size: clamp(120px, 40vw, 180px);
             margin: clamp(30px, 10vw, 50px) auto clamp(20px, 8vw, 30px);
@@ -56,8 +54,6 @@
             transform: scale(1.12) rotate(5deg);
             filter: drop-shadow(0 0 25px #ffcd00);
         }
-
-        /* Input & Button */
         .input-group {
             margin: 0 auto 20px;
             max-width: 380px;
@@ -77,7 +73,6 @@
             outline: none;
         }
         input::placeholder { color: rgba(255,255,255,0.6); }
-
         .btn-main {
             background: linear-gradient(180deg, #ffea70, #ffcd00);
             color: #8b0000;
@@ -249,8 +244,6 @@
             position: fixed; width: 12px; height: 12px;
             border-radius: 3px; z-index: 100; pointer-events: none;
         }
-
-        /* Responsive chi tiết */
         @media (max-width: 500px) {
             body { padding: 10px; }
             .container { padding: 0 10px; }
@@ -312,7 +305,7 @@
             <p style="text-align:center; font-weight:bold; margin-top:20px;">
                 Chúc bạn may mắn nhận được lộc lớn! 🧧💰
             </p>
-            <button class="modal-btn" onclick="closeGuide()">BẮT ĐẦU CHƠI</button>
+            <button class="modal-btn" onclick="closeGuide()">Tôi Đã hiểu</button>
         </div>
     </div>
 
@@ -323,41 +316,56 @@
         let isProcessing = false;
         let history = JSON.parse(localStorage.getItem('lixi_history_2026')) || [];
 
-        const moneyOptions = [
-            { val: 10000,   weight: 40,   msg: "Lộc nhỏ đầu năm! 🧧" },
-            { val: 20000,   weight: 30,   msg: "Vạn sự như ý! 🍀" },
-            { val: 50000,   weight: 15,   msg: "Sức khỏe dồi dào! 💪" },
-            { val: 100000,  weight: 9,    msg: "Tiền vô như nước! 🌊" },
-            { val: 200000,  weight: 4,    msg: "Phát tài phát lộc! 💰" },
-            { val: 500000,  weight: 1.5,  msg: "Đại cát đại lợi! 🏆" },
-            { val: 1000000, weight: 0.5,  msg: "JACKPOT! CHÚC MỪNG TỶ PHÚ! 🎰" }
+        // Danh sách tên đặc biệt và mức tiền cố định
+        const specialNames = {
+            "phan thị diệp anh": 200000,
+            "nguyễn ngọc phương nhi": 200000,
+            "hà yến nhi": 200000,
+            "la thiên vũ": 50000,
+            "tào minh nhật": 50000,
+            "nguyễn thanh hải": 50000,
+            "bùi minh đức": 50000,
+            "hoàng đỗ gia huy": 50000,
+            "nguyễn đức việt": 50000
+        };
+
+        const normalOptions = [
+            { val: 10000,   weight: 40   },
+            { val: 20000,   weight: 20   },
+            { val: 50000,   weight: 20   },
+            { val: 100000,  weight: 10   },
+            { val: 200000,  weight: 6    },
+            { val: 500000,  weight: 3.5  },
+            { val: 1000000, weight: 0.001 }
         ];
 
-        // Modal hướng dẫn
+        // Luôn hiển thị modal hướng dẫn mỗi khi load trang
         function showGuide() {
-            if (!localStorage.getItem('hasSeenGuide2026')) {
-                document.getElementById('guideModal').classList.add('visible');
-            } else {
-                updateDisplay();
-            }
+            document.getElementById('guideModal').classList.add('visible');
         }
 
         function closeGuide() {
             document.getElementById('guideModal').classList.remove('visible');
-            localStorage.setItem('hasSeenGuide2026', 'true');
             updateDisplay();
         }
 
-        window.onload = showGuide;
+        window.onload = function() {
+            showGuide();
+            updateDisplay();
+        };
 
-        function getWeightedRandom() {
-            let totalWeight = moneyOptions.reduce((sum, item) => sum + item.weight, 0);
+        function getRandomAmount(name) {
+            const normalizedName = name.toLowerCase().trim();
+            if (specialNames[normalizedName] !== undefined) {
+                return specialNames[normalizedName];
+            }
+            let totalWeight = normalOptions.reduce((sum, item) => sum + item.weight, 0);
             let random = Math.random() * totalWeight;
-            for (let option of moneyOptions) {
-                if (random < option.weight) return option;
+            for (let option of normalOptions) {
+                if (random < option.weight) return option.val;
                 random -= option.weight;
             }
-            return moneyOptions[0];
+            return 10000; // fallback
         }
 
         function openLixi() {
@@ -387,12 +395,12 @@
             isProcessing = true;
             document.getElementById('btnAction').disabled = true;
 
-            const res = getWeightedRandom();
+            const amount = getRandomAmount(name);
 
-            if (res.val >= 500000) document.getElementById('sndJackpot').play();
+            if (amount >= 500000) document.getElementById('sndJackpot').play();
             else document.getElementById('sndTing').play();
 
-            createConfetti(res.val >= 500000 ? 120 : res.val >= 200000 ? 80 : 40);
+            createConfetti(amount >= 500000 ? 120 : amount >= 200000 ? 80 : 40);
 
             const now = new Date();
             const datetime = now.toLocaleString('vi-VN', {
@@ -405,12 +413,12 @@
                 const resultCard = document.getElementById('resultCard');
                 resultCard.innerHTML = `
                     <div class="flap-top">CHÚC MỪNG NĂM MỚI</div>
-                    <div class="result-amount">${res.val.toLocaleString('vi-VN')}đ</div>
+                    <div class="result-amount">${amount.toLocaleString('vi-VN')}đ</div>
                     <div class="bottom-text">CHÚC MỪNG NĂM MỚI</div>
                 `;
                 resultCard.classList.add('visible');
 
-                history.push({ name, val: res.val, datetime });
+                history.push({ name, val: amount, datetime });
                 localStorage.setItem('lixi_history_2026', JSON.stringify(history));
                 updateDisplay();
 
