--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 
         <div class="history-card">
             <div style="font-weight:bold; border-bottom:1px solid var(--gold-tet); padding-bottom:8px;">
-                📜 DANH SÁCH NHẬN LỘC
+                 DANH SÁCH NHẬN LỘC
             </div>
             <div class="history-list" id="historyList"></div>
             <button onclick="clearAll()" style="background:none; border:none; color:#ffaaaa; cursor:pointer; font-size:0.85em; margin-top:12px; display:block; margin-left:auto;">
@@ -287,8 +287,8 @@
     <!-- Modal hướng dẫn -->
     <div id="guideModal">
         <div class="modal-content">
-            <h2>🎉 HƯỚNG DẪN CHƠI LÌ XÌ TẾT 2026 🎉</h2>
-            <p>1. Nhập <strong>họ và tên ĐẦY ĐỦ</strong> (ví dụ: Nguyễn Văn A, Trần Thị Bích Ngọc).<br>
+            <h2>HƯỚNG DẪN CHƠI LÌ XÌ TẾT 2026</h2>
+            <p>1. Nhập <strong>họ và tên ĐẦY ĐỦ</strong> (ví dụ: Nguyễn Văn A).<br>
                → Chỉ nhập tên riêng (Văn A, Bích, A...) sẽ không được rút!</p>
             <p>2. Nhấn nút <strong>"RÚT LÌ XÌ NGAY"</strong> để nhận lộc.<br>
                → Mỗi người chỉ được rút <strong>1 lần duy nhất</strong>!</p>
@@ -304,6 +304,9 @@
             </ul>
             <p style="text-align:center; font-weight:bold; margin-top:20px;">
                 Chúc bạn may mắn nhận được lộc lớn! 🧧💰
+            </p>
+             <p style="text-align:center; font-weight:bold; margin-top:20px;">
+                LƯU Ý: CHỤP LẠI KẾT QUẢ RỒI GỬI CHO SANG NẾU NHẬN ĐƯỢC TIỀN, XIN CẢM ƠN!
             </p>
             <button class="modal-btn" onclick="closeGuide()">Tôi Đã hiểu</button>
         </div>
