--- a/index.html
+++ b/index.html
@@ -294,13 +294,13 @@
                → Mỗi người chỉ được rút <strong>1 lần duy nhất</strong>!</p>
             <p>3. Các mức tiền có thể nhận (xác suất ngẫu nhiên):</p>
             <ul>
-                <li>10.000đ   (rất phổ biến)</li>
+                <li>10.000đ (Giải Khuyến Khích)</li>
                 <li>20.000đ</li>
                 <li>50.000đ</li>
                 <li>100.000đ</li>
                 <li>200.000đ</li>
-                <li>500.000đ   (hiếm)</li>
-                <li>1.000.000đ (JACKPOT - cực hiếm!)</li>
+                <li>500.000đ</li>
+                <li>1.000.000đ (Giải Đặc Biệt)</li>
             </ul>
             <p style="text-align:center; font-weight:bold; margin-top:20px;">
                 Chúc bạn may mắn nhận được lộc lớn! 🧧💰
