--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 
             const nameParts = name.split(/\s+/).filter(part => part.length > 0);
             if (nameParts.length < 2) {
-                alert("Vui lòng nhập **đầy đủ họ và tên** (ít nhất 2 từ)!\nVí dụ: Nguyễn Văn A, Trần Thị Bích Ngọc\nKhông được chỉ nhập tên riêng lẻ.");
+                alert("Vui lòng nhập **đầy đủ họ và tên** (ít nhất 2 từ)! \nVí dụ: Nguyễn Văn A \nKhông được chỉ nhập tên riêng lẻ.");
                 nameInput.focus();
                 return;
             }
