--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                → Chỉ nhập tên riêng (Văn A, Bích, A...) sẽ không được rút!</p>
             <p>2. Nhấn nút <strong>"RÚT LÌ XÌ NGAY"</strong> để nhận lộc.<br>
                → Mỗi người chỉ được rút <strong>1 lần duy nhất</strong>!</p>
-            <p>3. Các mức tiền có thể nhận (xác suất ngẫu nhiên):</p>
+            <p>3. Các mức tiền có thể nhận (xác suất trúng là ngẫu nhiên):</p>
             <ul>
                 <li>10.000đ (Giải An Ủi)</li>
                 <li>20.000đ (Giải Khuyến Khích)</li>
