--- a/index.html
+++ b/index.html
@@ -308,6 +308,54 @@
              <p style="text-align:center; font-weight:bold; margin-top:20px;">
                 LƯU Ý: CHỤP LẠI KẾT QUẢ RỒI GỬI CHO SANG NẾU NHẬN ĐƯỢC TIỀN, XIN CẢM ƠN!
             </p>
+            <!-- link mạng xã hội -->
+<div style="text-align:center; margin-top:20px;">
+    <p style="font-weight:bold; margin-bottom:12px;">Liên Hệ Với Sang</p>
+
+    <a href="https://www.facebook.com/nguyenthanhsang70" target="_blank"
+       style="display:inline-flex;align-items:center;
+              margin:6px;padding:8px 14px;
+              border-radius:30px;
+              background:#1877f2;color:#fff;
+              text-decoration:none;font-size:15px;
+              transition:0.2s;">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="white" style="margin-right:6px;">
+            <path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.9V12h2.5V9.8c0-2.5 1.5-3.9 3.8-3.9
+            1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5V12h2.8l-.4 2.9h-2.4v7A10 10 0 0 0 22 12z"/>
+        </svg>
+        Facebook
+    </a>
+
+    <a href="https://www.instagram.com/ngth.sang70/" target="_blank"
+       style="display:inline-flex;align-items:center;
+              margin:6px;padding:8px 14px;
+              border-radius:30px;
+              background:linear-gradient(45deg,#feda75,#d62976,#962fbf);
+              color:#fff;text-decoration:none;font-size:15px;
+              transition:0.2s;">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="white" style="margin-right:6px;">
+            <path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm5 5a5 5 0 1 0 0 10 5 5 0 0 0 0-10zm6.5-.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3z"/>
+        </svg>
+        Instagram
+    </a>
+
+    <a href="https://www.tiktok.com/@nguyenthanhsang70" target="_blank"
+       style="display:inline-flex;align-items:center;
+              margin:6px;padding:8px 14px;
+              border-radius:30px;
+              background:#000;color:#fff;
+              text-decoration:none;font-size:15px;
+              transition:0.2s;">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="white" style="margin-right:6px;">
+            <path d="M21 8.5c-1.5 0-3-.5-4.2-1.5v7.2c0 3.4-2.8 6.3-6.3 6.3
+            -3.4 0-6.2-2.8-6.2-6.3 0-3.4 2.8-6.2 6.2-6.2.3 0 .7 0 1 .1v3.2
+            c-.3-.1-.6-.2-1-.2-1.7 0-3 1.4-3 3.1 0 1.7 1.3 3.1 3 3.1
+            1.7 0 3.1-1.4 3.1-3.4V2h3.2c.2 1.3.8 2.5 1.8 3.4
+            1 .9 2.3 1.5 3.7 1.6v1.5z"/>
+        </svg>
+        TikTok
+    </a>
+</div>
             <button class="modal-btn" onclick="closeGuide()">Tôi Đã hiểu</button>
         </div>
     </div>
