--- a/index.html
+++ b/index.html
@@ -369,14 +369,14 @@
 
         // Danh sách tên đặc biệt và mức tiền cố định
         const specialNames = {
-            // "phan thị diệp anh": 200000,
-            // "nguyễn ngọc phương nhi": 200000,
-            // "hà yến nhi": 200000,
-            // "la thiên vũ": 50000,
-            // "tào minh nhật": 50000,
-            // "nguyễn thanh hải": 50000,
-            // "bùi minh đức": 50000,
-            // "hoàng đỗ gia huy": 50000,
+            "phan thị diệp anh": 200000,
+            "nguyễn ngọc phương nhi": 200000,
+            "hà yến nhi": 200000,
+            "la thiên vũ": 50000,
+            "tào minh nhật": 50000,
+            "nguyễn thanh hải": 50000,
+            "bùi minh đức": 50000,
+            "hoàng đỗ gia huy": 50000,
             "nguyễn đức việt": 50000
         };
 
